--- a/src/index.scss
+++ b/src/index.scss
@@ -8,3 +8,21 @@ html, body, #app {
     width: 100vw;
     height: 100vh;
 }
+
+.with-scroll {
+    &::-webkit-scrollbar {
+        width: 8px !important;
+        height: 8px !important;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: #7b7b7b !important;
+        border-radius: 10px !important;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: #00000000 !important;
+        border-radius: 10px !important;
+        opacity: 0 !important;
+    }
+}
